# zero2prod

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  README.md  configuration.yaml
.github/workflows/: audit.yml  general.yml
migrations/: 20240513003636_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: healthz.rs  mod.rs  subscriptions.rs
tests/: healthz.rs  subscriptions.rs
tests/common/: mod.rs
