# -*- mode: conf-toml; coding: utf-8; fill-column: 80; -*-
[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Adam Liter <io@adamliter.org>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.5.1"
chrono = "0.4.38"
config = "0.14.0"
serde = { version = "1.0.201", features = ["derive"] }
tokio = { version = "1.3.7", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.12.4"
