# -*- mode: conf-toml; coding: utf-8; fill-column: 80; -*-
[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Adam Liter <io@adamliter.org>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.12.12"
